make user model and the signup view(Not finished)

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -20,10 +20,21 @@
                     <label for="usernameInput" class="form-label">Username</label>
                     <input type="text" class="form-control" id="usernameInput" name="username">
                 </div>
+
+                <div class="mb-3">
+                    <p>Interest</p>
+                    <select class="form-select" multiple aria-label="multiple select example">
+                        <option value="Music">Music</option>
+                        <option value="Gastornomy">Gastronomy</option>
+                        <option value="Sports">Sports</option>
+                        <option value="Social">Social</option>
+                    </select>
+                </div>
+
                 <div class="mb-3">
                     <label for="imageInput" class="form-label">Image</label>
                     <input type="url" class="form-control" id="imageInput" name="profileImg">
-                    <div class="form-text">Enter the URL for your profile picture.</div>
+                    <div class="form-text">Enter the URL for your avatar picture.</div>
                 </div>
                 <div class="d-grid gap-2">
                     <button type="submit" class="btn btn-dark block">Submit</button>
