--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,8 @@
 <header class="position-relative">
 
     <img class="img-fluid header-img" src="/images/hero.jpg" alt="index-photo" class="index-img">
-    <button type="button" class="index-btn btn btn-primary btn-lg position-absolute top-50 start-50 ">View
-        Events</button>
+
+    <a href="/event" class="index-btn btn btn-dark btn-lg position-absolute top-50 start-50">View Events</a>
 
 
 </header>
