--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -40,7 +40,7 @@
                               alt="#" class="logo-img">
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                           <li><a class="dropdown-item" href="#">Sign Up</a></li>
+                           <li><a class="dropdown-item" href="/signup">Sign Up</a></li>
                            <li><a class="dropdown-item" href="#">Log In</a></li>
                            <li><a class="dropdown-item" href="#">Log out</a></li>
                         </ul>
