signup form finished

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -36,6 +36,14 @@
                     <input type="url" class="form-control" id="imageInput" name="profileImg">
                     <div class="form-text">Enter the URL for your avatar picture.</div>
                 </div>
+                <div class="mb-3">
+                    <h2>Address:</h2>
+                    <label for="city" class="form-label">City:</label>
+                    <input type="text" class="form-control" id="city" name="city"><br><br>
+
+                    <label for="zipcode" class="form-label">Zip-code</label>
+                    <input type="text" class="form-control" id="zipcode" name="zipcode"><br><br>
+                </div>
                 <div class="d-grid gap-2">
                     <button type="submit" class="btn btn-dark block">Submit</button>
                 </div>
