--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -25,10 +25,10 @@
                   <a class="nav-link" href="/">Home</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="#">Events</a>
+                  <a class="nav-link" href="/event">Events</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="#">Create Event</a>
+                  <a class="nav-link" href="/event-create">Create Event</a>
                </li>
                <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
                   <ul class="navbar-nav">
@@ -41,7 +41,7 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
                            <li><a class="dropdown-item" href="/signup">Sign Up</a></li>
-                           <li><a class="dropdown-item" href="#">Log In</a></li>
+                           <li><a class="dropdown-item" href="/login">Log In</a></li>
                            <li><a class="dropdown-item" href="#">Log out</a></li>
                         </ul>
                      </li>
