--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -39,10 +39,10 @@
                 <div class="mb-3">
                     <h2>Address:</h2>
                     <label for="city" class="form-label">City:</label>
-                    <input type="text" class="form-control" id="city" name="city"><br><br>
+                    <input type="text" class="form-control" id="city" name="address[city]"><br><br>
 
                     <label for="zipcode" class="form-label">Zip-code</label>
-                    <input type="text" class="form-control" id="zipcode" name="zipcode"><br><br>
+                    <input type="text" class="form-control" id="zipcode" name="address[zipcode]"><br><br>
                 </div>
                 <div class="d-grid gap-2">
                     <button type="submit" class="btn btn-dark block">Submit</button>
