--- a/views/not-found.hbs
+++ b/views/not-found.hbs
@@ -3,3 +3,5 @@
   This route does not exist on the server! Check your app to see if everything is ok! To find out what may have
   happened, check your routes.
 </h2>
+
+<p>asdfrgh</p>
