--- a/views/event/event.hbs
+++ b/views/event/event.hbs
@@ -1,8 +1,9 @@
 {{!-- REVISAR ESTE APARTADO PARA CUANDO INSERTEMOS LA API PODER NOMBRAR BIEN CADA PARTE --}}
 
-
+<br>
 <div class="container">
-    <h1>EVENT LIST</h1>
+    <br>
+    <h1>Event List</h1>
     <hr>
     <div class="row">
         {{#each '###############################'}}
@@ -10,11 +11,15 @@
             <article class="cards">
                 <img src="INSERTAR IMAGEN">
             </article>
-            <p><b>{{name}}</b></p>
+            <p><b>{{title}}</b></p>
             <p>{{location}}</p>
         </div>
         {{/each}}
     </div>
-    <hr>
-    <a href="/" class="btn btn-dark mt-3 mb-5">Home</a>
+    <br>
+    <div class="btn">
+        <a href="/" class="btn btn-dark mt-3 mb-5">Home</a>
+    </div>
+    <br>
 </div>
+<br>
