--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,9 +1,11 @@
+<br>
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-6">
+            <br>
             <h1>Log in</h1>
             <hr>
-            <form action="/login" method="POST">
+            <form action="/auth/login" method="POST">
                 <div class="mb-3">
                     <label for="emailInput" class="form-label">Email</label>
                     <input type="email" class="form-control" id="emailInput" name="email">
@@ -13,7 +15,9 @@
                     <input type="password" class="form-control" id="pwdInput" name="userPwd">
                 </div>
                 <div class="d-grid gap-2">
-                    <button type="submit" class="btn btn-dark block">Submit</button>
+                    {{!-- <button type="submit" class="btn btn-dark block">Submit</button> --}}
+                    <a href="/"class="btn btn-dark block">Submit</a>
+                    <br>
                 </div>
                 {{#if errorMessage}}
                 <div id="errorMessage">
