--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,9 +1,11 @@
+<br>
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-6">
+            <br>
             <h1>Sign Up</h1>
             <hr>
-            <form action="/signup" method="POST">
+            <form action="/auth/signup" method="POST">
                 <div class="mb-3 row">
                     <div class="col">
                         <label for="emailInput" class="form-label">Email</label>
@@ -45,7 +47,9 @@
                     <input type="text" class="form-control" id="zipcode" name="zipcode"><br><br>
                 </div>
                 <div class="d-grid gap-2">
-                    <button type="submit" class="btn btn-dark block">Submit</button>
+                    {{!-- <button type="submit" class="btn btn-dark block">Submit</button> --}}
+                    <a href="/" class="btn btn-dark block">Submit</a>
+                    <br>
                 </div>
                 {{#if errorMessage}}
                 <div id="errorMessage">
@@ -56,3 +60,4 @@
         </div>
     </div>
 </div>
+<br>
