--- a/views/event/event-detail.hbs
+++ b/views/event/event-detail.hbs
@@ -1,8 +1,10 @@
 {{!-- REVISAR ESTE APARTADO PARA CUANDO INSERTEMOS LA API PODER NOMBRAR BIEN CADA PARTE --}}
 
-
+<br>
 <div class="container">
-    <h1>EVe</h1>
+    <br>
+    <h1>Event Detail</h1>
+    <h2>{{title}}</h2>
     <img src="INSERTAR IMAGEN">
     <p>{{location}}
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla aliquam massa orci, sit amet scelerisque velit
@@ -16,7 +18,7 @@
         leo, rutrum sodales tortor fringilla accumsan. Sed facilisis purus vitae sem consequat, eu bibendum metus
         rutrum.</p>
     <br>
-    <a href="#" class="btn btn-danger">Delete</a>
-    <a href="#" class="btn btn-warning">Edit</a>
+    <a href="/event/:_id/delete" class="btn btn-danger">Delete</a>
+    <a href="/event/:_id/edit" class="btn btn-warning">Edit</a>
     {{/if}}
 </div>
