--- a/views/event/event-edit.hbs
+++ b/views/event/event-edit.hbs
@@ -1,14 +1,15 @@
 {{!-- REVISAR ESTE APARTADO PARA CUANDO INSERTEMOS LA API PODER NOMBRAR BIEN CADA PARTE --}}
-
+<br>
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-6">
+            <br>
             <h1>Edit Event</h1>
             <hr>
-            <form action="/event/:id/edit" method="POST">
+            <form action="/event/:_id/edit" method="POST">
                 <div class="mb-3">
                     <label for="nameInput" class="form-label">Event Name</label>
-                    <input type="text" class="form-control" id="nameInput" name="name" value={{name}}>
+                    <input type="text" class="form-control" id="nameInput" name="name" value={{title}}>
                 </div>
                 <div class="mb-3">
                     <label for="location" class="form-label">Location</label>
@@ -17,10 +18,11 @@
                 <div class="mb-3">
                     <label for="image" class="form-label">Image</label>
                     <img src="INSERTAR IMAGEN">
-                    <input type="text" class="form-control" id="image" name="role" value={{image}}>
+                    <input type="text" class="form-control" id="image" name="role" value={{eventImg}}>
                 </div>
                 <div class="d-grid gap-2">
-                    <button type="submit" class="btn btn-dark block">Submit</button>
+                    {{!-- <button type="submit" class="btn btn-dark block">Submit</button> --}}
+                    <a href="/" class="btn btn-dark block">Submit</a>
                 </div>
                 {{#if errorMessage}}
                 <div id="errorMessage">
