--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,21 @@
-<header class="position-relative">
+{{!-- <header class="position-relative">
 
     <img class="img-fluid header-img" src="/images/hero.jpg" alt="index-photo" class="index-img">
 
-    <a href="/event" class="index-btn btn btn-dark btn-lg position-absolute top-50 start-50">View Events</a>
+    <a href="/event/list" class="index-btn btn btn-dark btn-lg position-absolute top-50 start-50">View Events</a>
 
-
-</header>
+</header> --}}
+<br>
+<div class="container">
+    <br>
+    <h1>WE HAVE ALL THE EVENTS THAT YOU NEED</h1>
+    <hr>
+    <div class="mx-auto">
+        <img class="img-fluid header-img" "mx-auto" src="/images/hero.jpg" alt="index-photo" class="index-img">
+    </div>
+    <div class="d-grid gap-2">
+        <br>
+        <a href="/event/list" class="btn btn-dark block">View Events</a>
+        <br>
+    </div>
+</div>
