--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,10 +10,10 @@ body {
   border-radius: 50%;
 }
 
-.header-img {
+/* .header-img {
   width: 50%;
 
-}
+} */
 
 .container {
   background-color: azure;
