--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,8 +10,8 @@
     <br>
     <h1>WE HAVE ALL THE EVENTS THAT YOU NEED</h1>
     <hr>
-    <div class="mx-auto">
-        <img class="img-fluid header-img" "mx-auto" src="/images/hero.jpg" alt="index-photo" class="index-img">
+    <div class="mx-auto" style="width: 200px">
+        <img class="header-img" "mx-auto" src="/images/hero.jpg" alt="index-photo">
     </div>
     <div class="d-grid gap-2">
         <br>
