--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -15,8 +15,8 @@
                     <input type="password" class="form-control" id="pwdInput" name="userPwd">
                 </div>
                 <div class="d-grid gap-2">
-                    {{!-- <button type="submit" class="btn btn-dark block">Submit</button> --}}
-                    <a href="/"class="btn btn-dark block">Submit</a>
+                    <button type="submit" class="btn btn-dark block">Submit</button>
+
                     <br>
                 </div>
                 {{#if errorMessage}}
