--- a/views/event/event-create.hbs
+++ b/views/event/event-create.hbs
@@ -62,9 +62,8 @@
                     </div>
                 </div>
                 <div class="d-grid mt-5">
-                    <a href="/" class="btn btn-dark btn-lg">Create Event</a>
                     <br>
-                    {{!-- <button type="submit" class="btn btn-dark btn-lg">Create Event</button> --}}
+                    <button type="submit" class="btn btn-dark btn-lg">Create Event</button>
                 </div>
             </form>
         </div>
