--- a/views/event/event-edit.hbs
+++ b/views/event/event-edit.hbs
@@ -21,8 +21,7 @@
                     <input type="text" class="form-control" id="image" name="role" value={{eventImg}}>
                 </div>
                 <div class="d-grid gap-2">
-                    {{!-- <button type="submit" class="btn btn-dark block">Submit</button> --}}
-                    <a href="/" class="btn btn-dark block">Submit</a>
+                    <button type="submit" class="btn btn-dark block">Submit</button>
                 </div>
                 {{#if errorMessage}}
                 <div id="errorMessage">
