--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -47,8 +47,7 @@
                     <input type="text" class="form-control" id="zipcode" name="zipcode"><br><br>
                 </div>
                 <div class="d-grid gap-2">
-                    {{!-- <button type="submit" class="btn btn-dark block">Submit</button> --}}
-                    <a href="/" class="btn btn-dark block">Submit</a>
+                    <button class="btn btn-dark block">Submit</button>
                     <br>
                 </div>
                 {{#if errorMessage}}
