--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -40,6 +40,7 @@
                               alt="#" class="logo-img">
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                           <li><a class="dropdown-item" href="/user/profile">Profile</a></li>
                            <li><a class="dropdown-item" href="/auth/signup">Sign Up</a></li>
                            <li><a class="dropdown-item" href="/auth/login">Log In</a></li>
                            <form action="/auth/logout" method="POST">
