--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -1,2 +1,66 @@
+{{!-- <div class="container row">
+    <div class="col">
+        <br>
+        <h2>HELLO {{username}}</h2>
+    </div>
+    <div class="col">
+        <br>
+        <h3>Eventos Guardados</h3>
+        <p>Próximamente eventos guardados</p>
+    </div>
+    <div class="col">
+        <img src="https://ionicframework.com/docs/img/demos/avatar.svg" style="width: 20%" alt="#">
+    </div>
+    <div class="col">
+        <h3>Información</h3>
+        <ul>
+            <li>{{username}}pepito1234</li>
+            <li>{{email}}pepito@correo.com</li>
+            <li>{{address}}Calle Falsa 1234</li>
+            <li>{{interests}}Music</li>
+            <li>{{role}}User</li>
+        </ul>
+    </div>
+</div>
+<br> --}}
+
 <br>
-<h1>HELLO USER</h1>
+<div class="container">
+    <br>
+    <h1>User Profile </h1>
+    <hr>
+    <div class="row">
+        <div class="col-md-4">
+            <img src="https://ionicframework.com/docs/img/demos/avatar.svg" style="width: 60%" alt="#">
+        </div>
+        <div class="col">
+            <h3>Información:</h3>
+            <ul>
+                <li> <strong>Username:</strong>{{username}} pepito1234</li>
+                <br>
+                <li><strong>Email:</strong>{{email}} pepito@correo.com</li>
+                <br>
+                <li><strong>Address:</strong>{{address}} Calle Falsa 1234</li>
+                <br>
+                <li><strong>Interests:</strong>{{interests}} Music</li>
+                <br>
+                <li><strong>Role:</strong>{{role}} User</li>
+            </ul>
+        </div>
+        <hr>
+        <div class="col-md-4">
+            <h3>Eventos Guardados</h3>
+            <hr>
+            <p>Próximamente aparecerán los eventos guardados</p>
+        </div>
+    </div>
+    <div class="btn">
+        <a href="/" class="btn btn-primary mt-3 mb-5">Home</a>
+    </div>
+    <div class="btn">
+        <a href="/event/:_id/edit" class="btn btn-warning mt-3 mb-5">Edit</a>
+    </div>
+    <div class="btn">
+        <a href="/event/:_id/deletet" class="btn btn-danger mt-3 mb-5">Delete</a>
+    </div>
+</div>
