--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -25,7 +25,7 @@
 
                 <div class="mb-3">
                     <p>Interest</p>
-                    <select id="interest" name="interest">
+                    <select id="interests" name="interests">
                         <option value="Music">Music</option>
                         <option value="Gastronomy">Gastronomy</option>
                         <option value="Sports">Sports</option>
