--- a/views/event/event.hbs
+++ b/views/event/event.hbs
@@ -1,7 +1,4 @@
-{{!-- REVISAR ESTE APARTADO PARA CUANDO INSERTEMOS LA API PODER NOMBRAR BIEN CADA PARTE --}}
-
-<br>
-<div class="container">
+<div class="container mt-5">
     <br>
     <h1>Event List</h1>
     <hr>
@@ -12,7 +9,7 @@
             <p>{{start}}--- {{end}}</p>
 
             <article class="cards">
-                <img src="INSERTAR IMAGEN">
+                {{eventImg}}
             </article>
             <p><b>{{title}}</b></p>
             <p>{{location}}</p>
