--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,9 @@
-<br>
-<div class="container">
+<div class="container mt-5">
     <br>
     <h1>WE HAVE ALL THE EVENTS THAT YOU NEED</h1>
     <hr>
     <div class="mx-auto" style="width: 400px">
-        <img class="header-img" "mx-auto" src="/images/hero.jpg" alt="index-photo">
+        <img class="header-img" src="/images/hero.jpg" alt="index-photo">
     </div>
     <div class="d-grid gap-2">
         <br>
