--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -1,31 +1,4 @@
-{{!-- <div class="container row">
-    <div class="col">
-        <br>
-        <h2>HELLO {{username}}</h2>
-    </div>
-    <div class="col">
-        <br>
-        <h3>Eventos Guardados</h3>
-        <p>Próximamente eventos guardados</p>
-    </div>
-    <div class="col">
-        <img src="https://ionicframework.com/docs/img/demos/avatar.svg" style="width: 20%" alt="#">
-    </div>
-    <div class="col">
-        <h3>Información</h3>
-        <ul>
-            <li>{{username}}pepito1234</li>
-            <li>{{email}}pepito@correo.com</li>
-            <li>{{address}}Calle Falsa 1234</li>
-            <li>{{interests}}Music</li>
-            <li>{{role}}User</li>
-        </ul>
-    </div>
-</div>
-<br> --}}
-
-<br>
-<div class="container">
+<div class="container mt-5">
     <br>
     <h1>User Profile </h1>
     <hr>
