--- a/views/event/event-detail.hbs
+++ b/views/event/event-detail.hbs
@@ -1,11 +1,10 @@
-{{!-- REVISAR ESTE APARTADO PARA CUANDO INSERTEMOS LA API PODER NOMBRAR BIEN CADA PARTE --}}
-
-<br>
-<div class="container">
+<div class="container mt-5">
     <br>
     <h1>Event Detail</h1>
     <h2>{{title}}</h2>
-    <img src="INSERTAR IMAGEN">
+    <div class="cards">
+        {{eventImg}}
+    </div>
     <p>{{location}}
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla aliquam massa orci, sit amet scelerisque velit
         imperdiet
