--- a/views/event/event-edit.hbs
+++ b/views/event/event-edit.hbs
@@ -1,6 +1,4 @@
-{{!-- REVISAR ESTE APARTADO PARA CUANDO INSERTEMOS LA API PODER NOMBRAR BIEN CADA PARTE --}}
-<br>
-<div class="container">
+<div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <br>
