--- a/views/event/event-edit.hbs
+++ b/views/event/event-edit.hbs
@@ -1,22 +1,35 @@
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <br>
             <h1>Edit Event</h1>
-            <hr>
-            <form action="/event/:_id/edit" method="POST">
+            <form action="/event/{{_id}}/edit" method="POST">
                 <div class="mb-3">
-                    <label for="nameInput" class="form-label">Event Name</label>
-                    <input type="text" class="form-control" id="nameInput" name="name" value={{title}}>
+                    <label for="title" class="form-label">Event Title</label>
+                    <input type="text" class="form-control" id="title" name="title" value="{{title}}">
                 </div>
                 <div class="mb-3">
-                    <label for="location" class="form-label">Location</label>
-                    <input type="text" class="form-control" id="location" name="role" value={{location}}>
+                    <label for="description" class="form-label">Description</label>
+                    <input type="text" class="form-control" id="description" name="description" value="{{description}}">
                 </div>
                 <div class="mb-3">
-                    <label for="image" class="form-label">Image</label>
-                    <img src="INSERTAR IMAGEN">
-                    <input type="text" class="form-control" id="image" name="role" value={{eventImg}}>
+                    <label for="category" class="form-label">Category</label>
+                    <input type="text" class="form-control" id="category" name="category" value="{{category}}">
+                </div>
+                <div class="mb-3">
+                    <label for="eventImg" class="form-label">Image</label>
+                    <input type="text" class="form-control" id="eventImg" name="eventImg" value="{{eventImg}}">
+                </div>
+                <div class="mb-3">
+                    <label for="city" class="form-label">City</label>
+                    <input type="text" class="form-control" id="city" name="city" value="{{city}}">
+                </div>
+                <div class="mb-3">
+                    <label for="start" class="form-label">Start</label>
+                    <input type="date" class="form-control" id="start" name="start" value="{{start}}">
+                </div>
+                <div class="mb-3">
+                    <label for="end" class="form-label">End</label>
+                    <input type="date" class="form-control" id="end" name="end" value="{{end}}">
                 </div>
                 <div class="d-grid gap-2">
                     <button type="submit" class="btn btn-dark block">Submit</button>
