--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -35,7 +35,7 @@
 
                 <div class="mb-3">
                     <label for="imageInput" class="form-label">Image</label>
-                    <input type="url" class="form-control" id="imageInput" name="profileImg">
+                    <input type="url" class="form-control" id="imageInput" name="avatar">
                     <div class="form-text">Enter the URL for your avatar picture.</div>
                 </div>
                 <div class="mb-3">
