--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <title>{{title}}</title>
+   <title>Proyecto2</title>
    <link rel="stylesheet" href="/stylesheets/style.css" />
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -34,7 +34,7 @@
                   <a class="nav-link" href="/auth/signup">Sign Up</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="/auth/login">Log In</a>
+                  <a class="nav-link" href="/auth/login">Log in</a>
                </li>
             </ul>
             <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
@@ -42,8 +42,11 @@
                   <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="https://i.pinimg.com/originals/f8/1b/a6/f81ba6a46659f461955e27a8959ced46.jpg" alt="#"
-                           class="logo-img">
+                        {{#if avatar}}
+                        <img src="{{avatar}}" style="width: 60%" alt="#" class="logo-img">
+                        {{else}}
+                        <img src="https://i.stack.imgur.com/l60Hf.png" style="width: 50%" alt="#" class="logo-img">
+                        {{/if}}
                      </a>
                      <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
                         <li><a class="dropdown-item" href="/user/profile">Profile</a></li>
