--- a/views/event/event-detail.hbs
+++ b/views/event/event-detail.hbs
@@ -18,22 +18,29 @@
                 <br>
                 <li><strong>End:</strong> {{end}}</li>
                 <br>
+                <li><strong>City:</strong> {{event.location.city}}</li>
+                <br>
+                <button class="btn btn-primary">Save Event ❤️</button>
             </ul>
         </div>
+        <hr>
+        <div class=" col">
+            <h3>Mapa</h3>
+            <hr>
+            <img src="https://cdn.computerhoy.com/sites/navi.axelspringer.es/public/media/image/2023/02/google-maps-2961754.jpg?tf=3840x"
+                alt="#" style="width: 50%;">
+        </div>
+        <br>
         <hr>
         <div class="col">
             <h3>Assistants</h3>
             <ul>
                 <li>
                     {{assistants}}
+
                 </li>
             </ul>
 
-        </div>
-        <div class="col-md-4">
-            <h3>Eventos Guardados</h3>
-            <hr>
-            <p>Próximamente aparecerán los eventos guardados</p>
         </div>
     </div>
     <div class="btn">
