--- a/views/event/event-list.hbs
+++ b/views/event/event-list.hbs
@@ -21,14 +21,11 @@
         <h2>Comunity Events</h2>
         {{#each extrernalEvents}}
         <div class="col-md-4">
-            <h3><a class="text-decoration-none text-black" href="/event/{{_id}}">{{title}}</a></h3>
+            <h3><a class="text-decoration-none text-black" href="/event/{{id}}">{{title}}</a></h3>
             <p>{{title}}</p>
             <p>Start: {{start}}</p>
             <p>End: {{end}}</p>
 
-            <article class="cards">
-                {{eventImg}}
-            </article>
         </div>
         {{/each}}
     </div>
