--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -34,10 +34,10 @@
             <a href="/" class="btn btn-primary mt-3 mb-5">Home</a>
         </div>
         <div class="btn">
-            <a href="/user/{{_id}}/edit" class="btn btn-sm btn-info">editar</a>
+            <a href="/user/{{_id}}/edit" class="btn btn-warning mt-3 mb-5">editar</a>
         </div>
         <form action="/user/{{_id}}/delete" method="POST" style="display: inline">
-            <input type="submit" value="eliminar" class="btn btn-sm btn-danger">
+            <input type="submit" value="eliminar" class="btn btn-danger mt-3 mb-5">
         </form>
     </div>
 </div>
