--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,6 +13,13 @@ body {
 .container {
   background-color: azure;
 }
-.dropdown{
+
+.dropdown {
   margin-right: 90px;
+}
+
+#map {
+  height: 100vh;
+  width: 100%;
+  background-color: rgb(194, 223, 248);
 }
