--- a/views/event/event-detail.hbs
+++ b/views/event/event-detail.hbs
@@ -4,7 +4,7 @@
     <hr>
     <div class="row">
         <div class="col-md-4">
-            <img src="{{eventImg}}" style="width: 60%" alt="#">
+            <img src="{{eventImg}}" style="width: 100%" alt="#">
         </div>
         <div class="col">
             <h3>Info:</h3>
@@ -18,37 +18,34 @@
                 <br>
                 <li><strong>End:</strong> {{end}}</li>
                 <br>
-                <li><strong>City:</strong> {{event.location.city}}</li>
+                <li><strong>City:</strong> {{location.type}}</li>
+                <br>
+                <li><strong>Assistants:</strong>
+                    <br>
+                    <img src="/images/Stacked.png" style="width: 20%" alt="">
+                </li>
                 <br>
                 <button class="btn btn-primary">Save Event ❤️</button>
             </ul>
         </div>
         <hr>
-        <div class=" col">
-            <h3>Mapa</h3>
-            <hr>
-            <img src="https://cdn.computerhoy.com/sites/navi.axelspringer.es/public/media/image/2023/02/google-maps-2961754.jpg?tf=3840x"
-                alt="#" style="width: 50%;">
-        </div>
         <br>
-        <hr>
-        <div class="col">
-            <h3>Assistants</h3>
-            <ul>
-                <li>
-                    {{assistants}}
-
-                </li>
-            </ul>
-
+        <div class=" col">
+            <h3>Map:</h3>
+            <br>
+            <figure id="map"></figure>
         </div>
     </div>
-    <div class="btn">
-        <a href="/" class="btn btn-primary mt-3 mb-5">Home</a>
+    <hr>
+    <div class="btns">
+        <div class="btn">
+            <a href="/" class="btn btn-primary mt-3 mb-5">Home</a>
+        </div>
+        <div class="btn">
+            <a href="/event/{{_id}}/edit" class="btn btn-warning mt-3 mb-5">Edit</a>
+        </div>
+        <form action="/event/{{_id}}/delete" method="POST" style="display: inline">
+            <input type="submit" value="Delete" class="btn btn-danger mt-3 mb-5">
+        </form>
     </div>
-    <a href="/event/{{_id}}/edit" class="btn btn-sm btn-info">editar</a>
-
-    <form action="/event/{{_id}}/delete" method="POST" style="display: inline">
-        <input type="submit" value="Delete" class="btn btn-sm btn-danger">
-    </form>
 </div>
