--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -30,12 +30,16 @@
                <li class="nav-item">
                   <a class="nav-link" href="/event/event-create">Create Event</a>
                </li>
+               {{#unless hideLogin}}
                <li class="nav-item">
                   <a class="nav-link" href="/auth/signup">Sign Up</a>
                </li>
+               {{/unless}}
+               {{#unless hideRegister}}
                <li class="nav-item">
                   <a class="nav-link" href="/auth/login">Log in</a>
                </li>
+               {{/unless}}
             </ul>
             <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
                <ul class="navbar-nav ms-auto">
@@ -45,7 +49,9 @@
                         {{#if avatar}}
                         <img src="{{avatar}}" style="width: 60%" alt="avatar" class="logo-img">
                         {{else}}
-                        <img src="https://i.stack.imgur.com/l60Hf.png" style="width: 50%" alt="default-avatar" class="logo-img">
+                        <img
+                           src="https://img.uxwing.com/wp-content/themes/uxwing/download/checkmark-cross/cross-icon.png"
+                           style="width: 50%" alt="default-avatar" class="logo-img">
                         {{/if}}
                      </a>
                      <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
@@ -67,6 +73,10 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"></script>
    <script src="/js/script.js"></script>
+   <script src="./js/mapStyles.js"></script>
+   <script src="./js/app.js"></script>
+   <script
+      src="https://maps.googleapis.com/maps/api/js?callback=initMap&key=AIzaSyAEBM2B2NHtdK48DV0aU3fMySjjpoHRu3I"></script>
 </body>
 
 </html>
